css/style.css
/* ... */
@media (max-width:793px) {
    nav ul li a {
        font-size: 12px;
        font-weight: 700;
    }

    p.userfeedback{
        margin: 18% auto 0 auto;
    }

    .imgw60cen{
        width:100%;
    }
    
    section, .with-bg-spacing{
        width:100%;
    }

    h1 {
        font-size: 40px;
        font-weight: 400;
    }

    h1.myname{
        font-size: 48px;
        letter-spacing:4px;
        /* text-align: center; */
    }
    
    h2 {
        font-size: 32px;
        letter-spacing: 1px;
    }

    h2.title{
        font-size: 16px;
        letter-spacing: 1px;
    }
    
    h3 {
        font-size: 20px;
    }
    
    p, li{
        font-size:16px;
    }

    .bg-top{
        display:none;
    }

}

.greyouttext{
    color:#888888
}


@media (max-width:740px) {
    img.aki_inlogo {
    float: none;
    width: 40%;
    margin: 0 auto;
}

.col-6 {width: 100%;}

.row {
    display: flex;
    flex-direction: column;
  }
  .sw-first {
    order: 2;
  }
  .sw-second {
    order: 1;
  }
  p.userfeedback {
    margin: 0 auto 0 auto;
    }

  .space-20t{
    margin-top:0;
  }

  /* .space-10b{
    margin-bottom:0;
  } */
}

@media (max-width: 600px) {
    .portfolio{
        width:100%;
    }
}

@media (max-width:560px) {

    /****************** FOOTER *****************/

    
    /* .container-footer {
        height: 14em;
    } */


    .wrapper input#submit {
        width: 100%;
    }

}

@media (max-width:480px){
    img.logo{
        width:32px;
    }
}

@media (max-width:425px) {

    h1 {
        font-size: 32px;
        font-weight:400;
    }

    h1.myname{
        font-size:40px;
    }

    header.name{
        margin-top: 15%;
    }

    #portfoliolist .portfolio {
        margin: 2% auto;
    }
    

    /* h2 {
        font-size: 24px;
    } */

    #portfoliolist .portfolio{
        width:100%;
    }

    #filters li {
        margin-right: 0;
    }

    .dribbble {
    padding: 10% 0;
    }

    /* .container-footer {
        height: 18em;
    } */

    ul.footer li {
        margin: 0;
        display: block;
        padding-bottom: 10px;
    }

    .column-half {
        width: 100%;
    }

    .arrow {
        font-size: 16px;
    }

    img.jlogo{
        width: 100%;
        margin: 5% auto;
    }

    /* .container-work p{
        width:100%;
    } */

    ul.ic{
        width:100%;
    }

    video.prototype{
        width:80%;
    }

    img.w50{
        width:100%;
    }

    .data{
        width:100%;
    }

    .portfolio .label-text{
        font-size:14px;
    }
   
    .portfolio .label-textcategory{
        font-size:12px;
    }
   
}

